[metadata]
name = package-repository
version = 0.0

[options]
setup_requires =
    pytest-runner
install_requires =
    boto3

tests_require =
    pytest
package_dir =
    =src
packages =
    find:
py_modules =
    get-profile-lambda
    profile_business
    profile_dao
    put_profile_lambda
    update_profile_lambda
include_package_data = True
[aliases]
test = pytest
[options.packages.find]
where=src
exclude = .git,*migrations*,venv,_vendor
max-line-length = 140
